update examples to match QS implementation

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -93,58 +93,44 @@ In the following example, the user's first name is updated to "Test".
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {17}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   if (!clerk.user) {
-    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-    document.querySelector<HTMLDivElement>(
-      "#app"
-    )!.innerHTML = `<div id="sign-in"></div>`;
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
 
-    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+    const signInDiv = document.getElementById("sign-in");
 
-    clerk.mountSignIn(signInComponent, {});
+    clerk.mountSignIn(signInDiv);
   } else {
     await clerk.user.update({ firstName: "Test" });
   }
   ```
 
-  ```html {26}
+  ```html filename="index.html" {14}
   <script>
-    // Get your publishable key and frontend API URL from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener('load', async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
 
-    // Adds listener to initialize ClerkJS after it's loaded
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+        const signInDiv = document.getElementById("sign-in");
 
-      if (!window.Clerk.user) {
-        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
-
-        const signInComponent = document.querySelector("#sign-in");
-
-        window.Clerk.mountSignIn(signInComponent, {});
+        Clerk.mountSignIn(signInDiv);
       } else {
-        await window.Clerk.user.update({ firstName: "Test" })
+        await Clerk.user.update({ firstName: "Test" })
       }
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -163,58 +149,44 @@ function delete: () => Promise<void>;
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {17}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   if (!clerk.user) {
-    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-    document.querySelector<HTMLDivElement>(
-      "#app"
-    )!.innerHTML = `<div id="sign-in"></div>`;
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
 
-    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+    const signInDiv = document.getElementById("sign-in");
 
-    clerk.mountSignIn(signInComponent, {});
+    clerk.mountSignIn(signInDiv);
   } else {
     await clerk.user.delete();
   }
   ```
 
-  ```html {26}
+  ```html filename="index.html" {14}
   <script>
-    // Get your publishable key and frontend API URL from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener('load', async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
 
-    // Adds listener to initialize ClerkJS after it's loaded
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+        const signInDiv = document.getElementById("sign-in");
 
-      if (!window.Clerk.user) {
-        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
-
-        const signInComponent = document.querySelector("#sign-in");
-
-        window.Clerk.mountSignIn(signInComponent, {});
+        Clerk.mountSignIn(signInDiv);
       } else {
-        await window.Clerk.user.delete();
+        await Clerk.user.delete();
       }
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
@@ -267,58 +239,44 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 
 <InjectKeys>
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {17}
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
+  const clerk = new Clerk('{{pub_key}}');
   await clerk.load();
 
   if (!clerk.user) {
-    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-    document.querySelector<HTMLDivElement>(
-      "#app"
-    )!.innerHTML = `<div id="sign-in"></div>`;
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
 
-    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+    const signInDiv = document.getElementById("sign-in");
 
-    clerk.mountSignIn(signInComponent, {});
+    clerk.mountSignIn(signInDiv);
   } else {
     await clerk.user.getSessions();
   }
   ```
 
-  ```html {26}
+  ```html filename="index.html" {14}
   <script>
-    // Get your publishable key and frontend API URL from the Clerk Dashboard
-    const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
-    const version = '@latest'; // Set to appropriate version
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-    // Creates asynchronous script
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-frontend-api', frontendApi);
-    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-    script.async = true;
-    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
 
-    // Adds listener to initialize ClerkJS after it's loaded
-    script.addEventListener("load", async function () {
-      await window.Clerk.load();
+        const signInDiv = document.getElementById("sign-in");
 
-      if (!window.Clerk.user) {
-        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
-        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
-
-        const signInComponent = document.querySelector("#sign-in");
-
-        window.Clerk.mountSignIn(signInComponent, {});
+        Clerk.mountSignIn(signInDiv);
       } else {
-        await window.Clerk.user.getSessions();
+        await Clerk.user.getSessions();
       }
     });
-    document.body.appendChild(script);
   </script>
   ```
 </CodeBlockTabs>
