--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -62,7 +62,7 @@ Updates the user's attributes. Use this method to save information you collected
 
 The appropriate settings must be enabled in the Clerk Dashboard for the user to be able to update their attributes. For example, if you want to use the `update({ firstName })` method, you must enable the **Name** setting. It can be found in the the Clerk Dashboard under **User & Authentication > Email, Phone, Username > [Personal information](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username).**
 
-```typescript
+```js
 function update: (params: UpdateUserParams) => Promise<User>;
 ```
 
@@ -85,7 +85,7 @@ All props below are optional.
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<User\></code> | This method returns a `Promise` which resolves with the current `User` object. |
+| `Promise<User>` | This method returns a `Promise` which resolves with the current `User` object. |
 
 #### `update()` example
 
@@ -141,7 +141,7 @@ In the following example, the user's first name is updated to "Test".
 
 Deletes the current user.
 
-```typescript
+```js
 function delete: () => Promise<void>;
 ```
 
@@ -197,7 +197,7 @@ function delete: () => Promise<void>;
 
 Adds the user's profile image or replaces it if one already exists. This method will upload an image and associate it with the user.
 
-```typescript
+```js
 function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResource>;
 ```
 
@@ -225,7 +225,7 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
 
 Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
 
-```typescript
+```js
 function getSessions: () => Promise<SessionWithActivities[]>;
 ```
 
@@ -233,7 +233,7 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)[]\></code> | This method returns a `Promise` which resolves with an array of `SessionWithActivities` objects. |
+| `Promise<SessionWithActivities[]>` | This method returns a `Promise` which resolves with an array of [`SessionWithActivities`](/docs/references/javascript/session-with-activities) objects. |
 
 #### `getSessions()` example
 
@@ -287,7 +287,7 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 
 A check whether or not the given resource is the primary identifier for the user.
 
-```typescript
+```js
 function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberResource | Web3WalletResource) => boolean;
 ```
 
@@ -296,6 +296,215 @@ function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberReso
 | Name | Type | Description |
 | --- | --- | --- |
 | `ident` | [`EmailAddress`][email-ref] \| [`PhoneNumber`][phone-ref] \| [`Web3Wallet`][web3-ref] | The resource checked against the user to see if it is the primary identifier. |
+
+### `getOrganizationInvitations()`
+
+Retrieves a list of organization invitations for the user.
+
+```js
+function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsParams) => Promise<ClerkPaginatedResponse<UserOrganizationInvitation>>;
+```
+
+### `GetUserOrganizationInvitationsParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
+| `status?` | `'pending' \| 'accepted' \| 'revoked'` | The status an invitation can have. |
+
+#### `getOrganizationInvitations()` returns
+
+| Type | Description |
+| --- | --- |
+| `Promise<ClerkPaginatedResponse<UserOrganizationInvitation>>` | This method returns a `Promise` which resolves to a [ClerkPaginatedResponse](/docs/references/javascript/types/clerk-paginated-response) of `UserOrganizationInvitation` objects. |
+
+#### `getOrganizationInvitations()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  if (!clerk.user) {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv = document.getElementById("sign-in");
+
+    clerk.mountSignIn(signInDiv);
+  } else {
+    await clerk.user.getOrganizationInvitations();
+  }
+  ```
+
+  ```html filename="index.html" {14}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      } else {
+        await Clerk.user.getOrganizationInvitations();
+      }
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `getOrganizationSuggestions()`
+
+Retrieves a list of organization suggestions for the user.
+
+```js
+function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsParams) => Promise<ClerkPaginatedResponse<OrganizationSuggestion>>;
+```
+
+### `GetUserOrganizationInvitationsParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
+| `status?` | `'pending' \| 'accepted'` \| `['pending' \| 'accepted']` | The status an invitation can have. |
+
+#### `getOrganizationSuggestions()` returns
+
+| Type | Description |
+| --- | --- |
+| `Promise<ClerkPaginatedResponse<OrganizationSuggestion>>` | This method returns a `Promise` which resolves to a [ClerkPaginatedResponse](/docs/references/javascript/types/clerk-paginated-response) of `OrganizationSuggestion` objects. |
+
+#### `getOrganizationSuggestions()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  if (!clerk.user) {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv = document.getElementById("sign-in");
+
+    clerk.mountSignIn(signInDiv);
+  } else {
+    await clerk.user.getOrganizationSuggestions();
+  }
+  ```
+
+  ```html filename="index.html" {14}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      } else {
+        await Clerk.user.getOrganizationSuggestions();
+      }
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `getOrganizationMemberships()`
+
+Retrieves a list of organization memberships for the user.
+
+```js
+function getOrganizationMemberships: (params?: GetUserOrganizationMembershipParams) => Promise<ClerkPaginatedResponse<OrganizationMembershipResource>>;
+```
+
+### `GetUserOrganizationMembershipParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
+
+#### `getOrganizationMemberships()` returns
+
+| Type | Description |
+| --- | --- |
+| `Promise<ClerkPaginatedResponse<OrganizationSuggestion>>` | This method returns a `Promise` which resolves to a [ClerkPaginatedResponse](/docs/references/javascript/types/clerk-paginated-response) of `OrganizationMembership` objects. |
+
+#### `getOrganizationMemberships()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {16}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  if (!clerk.user) {
+    document.getElementById("app").innerHTML = `
+      <div id="sign-in"></div>
+    `;
+
+    const signInDiv = document.getElementById("sign-in");
+
+    clerk.mountSignIn(signInDiv);
+  } else {
+    await clerk.user.getOrganizationMemberships();
+  }
+  ```
+
+  ```html filename="index.html" {14}
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      if (!Clerk.user) {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      } else {
+        await Clerk.user.getOrganizationMemberships();
+      }
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ## Additional methods
 
