--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -27,7 +27,7 @@ All props are optional.
 
 ## Usage with frameworks
 
-The following example includes basic implementation of the `<CreateOrganization />` component. You can use this as a starting point for your own implementation.
+The following example includes a basic implementation of the `<CreateOrganization />` component. You can use this as a starting point for your own implementation.
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
