--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -12,13 +12,13 @@ There is no limit to the number of organizations a user can be a member of. Howe
 ## Enable organizations in your application
 
 To enable organizations:
-1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=organizations-settings).
-2. Select your application, then select **Organizations Settings** from the navigation sidebar.
-3. Select the toggle next to **Enable Organizations**.
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=organizations-settings) and select your application.
+2. In the navigation sidebar, select **Organizations Settings**.
+3. Toggle on **Enable Organizations**.
 
 ## Implement organization features in your application
 
-Clerk provides [prebuilt components](/docs/components/overview), [React hooks](/docs/references/react/use-organization), and [APIs](/docs/references/javascript/organization/organization) to help you integrate organizations into your application. Using the [Organizations Backend API](https://clerk.com/docs/reference/backend-api/tag/Organizations), you can provide additional [private and public metadata for the organization](/docs/organizations/metadata) and set custom attributes.
+Clerk provides [prebuilt components](/docs/components/overview), [React hooks](/docs/references/react/use-organization), and [APIs](/docs/references/javascript/organization/organization) to help you integrate organizations into your application. Using the [Organizations Backend API](https://clerk.com/docs/reference/backend-api/tag/Organizations), you can provide additional [private and public metadata for the organization](/docs/organizations/metadata) and set custom attributes.
 
 <Callout type="info">
   To explore Clerk's Organizations, check out this demo repo:
