DOCS-5497 Consolidate JS createorg and organization methods references --> component references (#780)
Co-authored-by: Shaquil Hansford <liuqahs15@gmail.com>

--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -1,9 +1,9 @@
 ---
-title: <CreateOrganization />
-description: The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
+title: <CreateOrganization /> component
+description: Clerk's <CreateOrganization /> component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 ---
 
-# `<CreateOrganization />`
+# `<CreateOrganization />` component
 
 <Images
   alt="Organization Switcher Example"
@@ -14,18 +14,20 @@ description: The `<CreateOrganization />` component is used to render an organiz
 
 The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 
-## `<CreateOrganization />` properties
+## Properties
 
-All props below are optional.
+All props are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
+| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate to after creating a new organization. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
 | `path` | `string` | The path where the component is mounted when path-based routing is used. <br />For example, `/create-org`<br />This prop is ignored in hash- and virtual-based routing. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
 
-## How to use the `<CreateOrganization />` component
+## Usage with frameworks
+
+The following example includes a basic implementation of the `<CreateOrganization />` component. You can use this as a starting point for your own implementation.
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -71,9 +73,248 @@ All props below are optional.
   </Tab>
 </Tabs>
 
-## How to customize the `<CreateOrganization />` component
+## Usage with JavaScript
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<CreateOrganization />` component:
+
+- [`mountCreateOrganization`](#mount-create-organization)
+- [`unmountCreateOrganization`](#unmount-create-organization)
+- [`openCreateOrganization`](#open-create-organization)
+- [`closeCreateOrganization`](#close-create-organization)
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
+### `mountCreateOrganization()`
+
+Render the `<CreateOrganization />` component to an HTML `<div>` element.
+
+```typescript
+function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
+```
+
+### `mountCreateOrganization()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<CreateOrganization />` component |
+| `props?` | [`CreateOrganizationProps`](#properties) | The properties to pass to the `<CreateOrganization />` component |
+
+#### `mountCreateOrganization()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="create-organization"></div>
+  `;
+
+  const createOrgDiv =
+    document.getElementById("create-organization");
+
+  clerk.mountCreateOrganization(createOrgDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const createOrgDiv =
+        document.getElementById("create-organization");
+
+      Clerk.mountCreateOrganization(createOrgDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `unmountCreateOrganization()`
+
+Unmount and run cleanup on an existing `<CreateOrganization />` component instance.
+
+```typescript
+function unmountCreateOrganization(node: HTMLDivElement): void;
+```
+
+#### `unmountCreateOrganization()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<CreateOrganization />` component instance |
+
+#### `unmountCreateOrganization()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="create-organization"></div>
+  `
+
+  const createOrgDiv =
+    document.getElementById('create-organization');
+
+  clerk.mountCreateOrganization(createOrgDiv);
+
+  // ...
+
+  clerk.unmountCreateOrganization(createOrgDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const createOrgDiv =
+        document.getElementById('create-organization');
+
+      Clerk.mountCreateOrganization(createOrgDiv);
+
+      // ...
+
+      Clerk.unmountCreateOrganization(createOrgDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `openCreateOrganization()`
+
+Opens the `<CreateOrganization />` component as an overlay at the root of your HTML `body` element.
+
+```typescript
+function openCreateOrganization(props?: CreateOrganizationProps): void;
+```
+
+#### `openCreateOrganization()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`CreateOrganizationProps`](#properties) | The properties to pass to the `<CreateOrganization />` component |
+
+#### `openCreateOrganization()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="create-organization"></div>
+  `
+
+  const createOrgDiv =
+    document.getElementById('create-organization');
+
+  clerk.openCreateOrganization(createOrgDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const createOrgDiv =
+        document.getElementById('create-organization');
+
+      Clerk.openCreateOrganization(createOrgDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+### `closeCreateOrganization()`
+
+Closes the organization profile overlay.
+
+```typescript
+function closeCreateOrganization(): void;
+```
+
+#### `closeCreateOrganization()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="create-organization"></div>
+  `
+
+  const createOrgDiv =
+    document.getElementById('create-organization');
+
+  clerk.openCreateOrganization(createOrgDiv);
+
+  // ...
+
+  clerk.closeCreateOrganization(createOrgDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="create-organization"> element to your HTML -->
+  <div id="create-organization"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const createOrgDiv =
+        document.getElementById('create-organization');
+
+      Clerk.openCreateOrganization(createOrgDiv);
+
+      // ...
+
+      Clerk.closeCreateOrganization(createOrgDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## Customization
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
-
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
