--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -1,53 +1,222 @@
 ---
 title: Organization methods
-description: These are all methods on the Clerk class that allow you to create, modify, or read information about Organizations.
+description: Explore methods on the Clerk class that allow you to create and read information about Organizations.
 ---
 
 # Organization methods
 
-These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that allow you to create, modify, or read information about [Organizations](/docs/references/javascript/organization/organization).
+These methods on the [`Clerk`](/docs/references/javascript/clerk/clerk) class allow you to create and read information about [Organizations](/docs/references/javascript/organization/organization).
+
+The following examples assume:
+- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
+- you have enabled the [Organizations feature](/docs/organizations/overview) in your Clerk Dashboard
 
 ## `getOrganization()`
+
+Retrieves information for a specific organization.
 
 ```typescript
 function getOrganization(organizationId: string): Promise<Organization | undefined>;
 ```
 
-The `getOrganization` method is used to get the information of an organization programatically.
-
-
-### Properties
+### `getOrganization` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The ID of the organization to be found. |
 
-### Returns
+### `getOrganization` example
 
-| Type | Description |
-| --- | --- |
-| <code>Promise\<[Organization][org-ref] \| undefined\></code> | This method returns a `Promise` which resolves to the requested [`Organization`][org-ref]. |
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+    <CodeBlockTabs options={["main.js", "index.html"]}>
+    ```js filename="main.js" {9}
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      if (clerk.organization.id) {
+        const organization = await clerk.getOrganization(clerk.organization.id);
+        console.log(organization);
+      } else {
+        console.log("User is not a member of an organization");
+      }
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv =
+        document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html" {9}
+  <div id="sign-in"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      if (Clerk.user) {
+        if (Clerk.organization.id) {
+          const organization = await Clerk.getOrganization(Clerk.organization.id);
+          console.log(organization);
+        } else {
+          console.log("User is not a member of an organization");
+        }
+      } else {
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+  ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
 
 ## `createOrganization()`
+
+Creates an organization programatically.
+
+<Callout type="info">
+  You can use Clerk's [`<CreateOrganization />`](/docs/components/organization/create-organization) component if you prefer a prebuilt user interface.
+</Callout>
 
 ```typescript
 function createOrganization({name, slug}: CreateOrganizationParams): Promise<Organization>;
 ```
 
-The `createOrganization` method is used to create an organization programatically.
-
-### Properties
+### `createOrganization()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `name` | `string` | The name of the organization to be created. |
 | `slug?` | `string` | The optional slug of the organization to be created. |
 
-### Returns
+### `createOrganization` example
 
-| Type | Description |
-| --- | --- |
-| <code>Promise\<[Organization][org-ref\></code> | This method returns a `Promise` which resolves to the newly created [`Organization`][org-ref]. |
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+    <CodeBlockTabs options={["main.js", "index.html"]}>
+    ```js filename="main.js" {11-13}
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      const createOrgButton = document.getElementById("create-org-button");
+      createOrgButton.onclick = function () {
+        clerk
+          .createOrganization({
+            name: "test-2",
+          })
+          .then((org) => {
+            console.log(org);
+          })
+          .catch((error) => {
+            console.error(error);
+          });
+      };
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv =
+        document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+        <button id="create-org-button">Create Organization</button>
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+    </CodeBlockTabs>
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html" {12-14}
+  <div id="sign-in"></div>
+  <div id="create-org-button"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      if (Clerk.user) {
+        const createOrgButton = document.getElementById("create-org-button");
+        createOrgButton.onclick = function () {
+          clerk
+            .createOrganization({
+              name: "test-2",
+            })
+            .then((org) => {
+              console.log(org);
+            })
+            .catch((error) => {
+              console.error(error);
+            });
+        };
+      } else {
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+  ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
 
 ## `getOrganizationMemberships()` (deprecated)
 
