--- a/docs/authentication/configuration/session-options.mdx
+++ b/docs/authentication/configuration/session-options.mdx
@@ -21,7 +21,9 @@ Fortunately, with Clerk you have to ability to fully control the lifetime of you
 
 ### Inactivity timeout
 
-Denotes the duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site. A user is considered inactive when the application is closed, or when the app stops refreshing the token.
+The duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site.
+
+A user is considered inactive when the application is closed, or when the app stops refreshing the token.
 
 By default, this setting is disabled for all newly created instances. To enable it and set your desired value:
 
