apply code review suggestions

--- a/docs/authentication/configuration/session-options.mdx
+++ b/docs/authentication/configuration/session-options.mdx
@@ -27,20 +27,20 @@ A user is considered inactive when the application is closed, or when the app st
 
 By default, this setting is disabled for all newly created instances. To enable it and set your desired value:
 
-1. Navigate to the Clerk Dashboard.
-2. Select your application, then select **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)** from the navigation sidebar.
-3. Toggle the **Inactivity timeout** switch to enable it.
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions) and select your application.
+2. In the navigation sidebar, select **Sessions**.
+3. Toggle on **Inactivity timeout**.
 4. Set your desired duration.
 
 ### Maximum lifetime
 
-Denotes the duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site.
+The duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site.
 
 By default, this setting is enabled with a default value of 7 days for all newly created instances. To find this setting and change the value:
 
-1. Navigate to the the Clerk Dashboard.
-2. Select your application, then select **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)** from the navigation sidebar.
-3. Toggle the **Maximum lifetime** switch to enable it.
+1. Navigate to the the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions) and select your application.
+2. In the navigation sidebar, select **Sessions**.
+3. Toggle on **Maximum lifetime**.
 4. Set your desired duration.
 
 ## Multi-session applications
@@ -51,8 +51,8 @@ A multi-session application is an application that allows multiple accounts to b
 
 To enable multi-session in your application, you need to configure it in the Clerk Dashboard.
 
-1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions)
-2. Select your application, then select **Sessions** in the navigation sidebar.
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions) and select your application.
+2. In the navigation sidebar, select **Sessions**.
 3. Toggle on **Multi-session handling**.
 4. Select **Save changes**.
 
