--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -35,15 +35,15 @@ To enable multi-session in your application, you need to configure it in the Cle
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
-// Retrieve the active session and user
+// Get the active session and user
 const { session, user } = useClerk();
 ```
 
 ```js
-// Retrieve the active session
+// Get the active session
 const activeSession = window.Clerk.session;
 
-// Retrieve the active user
+// Get the active user
 const activeUser = window.Clerk.user;
 ```
 </CodeBlockTabs>
@@ -56,7 +56,7 @@ import { useClerk } from "@clerk/clerk-react";
 
 const { client, setActive } = useClerk();
 
-// You can retrieve all the available sessions through the client
+// You can get all the available sessions through the client
 const availableSessions = client.sessions;
 
 // Use setActive to set the active session.
@@ -64,7 +64,7 @@ setActive({ session: availableSessions[0].id });
 ```
 
 ```js
-// You can retrieve all the available sessions through the client
+// You can get all the available sessions through the client
 const availableSessions = window.Clerk.client.sessions;
 
 // Use setActive to set the active session.
@@ -84,7 +84,7 @@ For more information on how Clerk's sign-in flow works, check out the [detailed 
 
 ## Sign out all sessions
 
-Use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) method to deactivate all sessions on the current client.
+Use [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) to deactivate all sessions on the current client.
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
@@ -104,13 +104,13 @@ await window.Clerk.signOut();
 
 ## Sign out active session
 
-Use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) method to deactivate a specific session by passing the session ID.
+Use [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) to deactivate a specific session by passing the session ID.
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
-// Retrieve the signOut method and the active session
+// Get the signOut method and the active session
 const { signOut, session } = useClerk();
 
 // Use signOut to sign-out the active session
@@ -118,7 +118,7 @@ await signOut(session.id);
 ```
 
 ```js
-// Retrieve the active session
+// Get the active session
 const activeSession = window.Clerk.session;
 
 // Use signOut to sign-out the active session
