--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -1,11 +1,11 @@
 ---
-title: Multi-session applications
+title: Build a custom multi-session flow
 description: Learn how to use the Clerk API to add multi-session handling to your application.
 ---
 
-# Multi-session applications
+# Build a custom multi-session flow
 
-<Callout type="danger">
+<Callout type="warning">
   This guide is for users who want to build a *custom* user interface using the Clerk API. To implement multi-session handling with a *prebuilt* UI, you should use Clerk's [`<UserButton />`](/docs/components/user/user-button) component.
 </Callout>
 
