--- a/docs/authentication/configuration/session-options.mdx
+++ b/docs/authentication/configuration/session-options.mdx
@@ -21,52 +21,45 @@ Fortunately, with Clerk you have to ability to fully control the lifetime of you
 
 ### Inactivity timeout
 
-Denotes the duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site. By default, this setting is disabled for all newly created instances. To enable it and set your desired value, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**.
+The duration after which a session will expire and the user will have to sign in again, if they haven't been active on your site.
 
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/session-options/inactivity-timeout.jpg"
-alt="The 'Sessions' configuration section in the Clerk Dashboard with a red outline around the 'Inactivity timeout' section. This option is toggled on, revealing an input for customizing the time duration until inactivity timeout. A red arrow is pointing to the 'Apply Changes' button."
-/>
+A user is considered inactive when the application is closed, or when the app stops refreshing the token.
+
+By default, this setting is disabled for all newly created instances. To enable it and set your desired value:
+
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions) and select your application.
+2. In the navigation sidebar, select **Sessions**.
+3. Toggle on **Inactivity timeout**.
+4. Set your desired duration.
 
 ### Maximum lifetime
 
-Denotes the duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site. By default, this setting is enabled with a default value of 7 days for all newly created instances. To find this setting and change the value, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**.
+The duration after which a session will expire and the user will have to sign in again, regardless of their activity on your site.
 
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/session-options/maximum-lifetime.jpg"
-alt="The 'Sessions' settings in the Clerk Dashboard with a red outline around the 'Maximum lifetime' section. This option is toggled on, revealing an input for customizing duration of a session lifetime."
-/>
+By default, this setting is enabled with a default value of 7 days for all newly created instances. To find this setting and change the value:
+
+1. Navigate to the the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions) and select your application.
+2. In the navigation sidebar, select **Sessions**.
+3. Toggle on **Maximum lifetime**.
+4. Set your desired duration.
 
 ## Multi-session applications
 
-Multi-session applications allow users to be signed into more than one account at a time from the same browser. Users may switch the active account by opening the [`<UserButton />`](/docs/components/user/user-button) and selecting the desired account.
+A multi-session application is an application that allows multiple accounts to be signed in from the same browser at the same time. The user can switch from one account to another seamlessly. Each account is independent from the rest and has access to different resources.
 
-To enable this feature in your application, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**. Turn on the **Mutli-session handling** toggle.
+To enable multi-session in your application, you need to configure it in the Clerk Dashboard.
 
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/session-options/multisession-handling.jpg"
-alt="The 'Multi-session handling' section under the 'Sessions' settings in the Clerk Dashboard. A red arrow is pointing to the 'Multi-session handling' toggle, which is toggled on, and there is also a red arrow pointing to the 'Apply Changes' button."
-/>
+1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=sessions) and select your application.
+2. In the navigation sidebar, select **Sessions**.
+3. Toggle on **Multi-session handling**.
+4. Select **Save changes**.
 
-Learn more about working with multi-session applications with Clerk components and custom flows in our [detailed guide](/docs/custom-flows/multi-session-applications).
+There are two main ways to add the multi-session feature to your application:
+- Use the [`<UserButton />`](/docs/components/user/user-button) component if you want to use Clerk's pre-built UI.
+- [Build a custom flow](/docs/custom-flows/multi-session-applications) if you want to rebuild the existing Clerk flow using the Clerk API.
 
 ## Customize session token
 
-Session tokens are JWTs that contain a set of standard claims required by Clerk, but there are times when you want to augment these tokens by providing additional claims of your own.
+Session tokens are JWTs that contain a set of [default claims](/docs/backend-requests/resources/session-tokens) required by Clerk. You can customize these tokens by providing additional claims of your own.
 
-To add custom claims to the session token, in the Clerk Dashboard, go to **[Sessions](https://dashboard.clerk.com/last-active?path=sessions)**. In the **Customize session token** section, click on the **Edit** button. This will open a modal window where you can add claims and even use our handy shortcodes.
-
-<Images
-width={3024}
-height={1652}
-src="/docs/images/authentication/session-options/customize-session-token.jpg"
-alt="The 'Customize session token' section under the 'Sessions' settings in the Clerk Dashboard. A red arrow is pointing to the 'Edit' button."
-/>
-
-To read more about the Clerk standard claims and customizing these tokens with JWT Templates, check out our [session token customization guide](/docs/backend-requests/making/custom-session-token).
+To learn how to customize session tokens, check out our [Customize your session token](/docs/backend-requests/making/custom-session-token) guide.
